Switched to PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-# H2 Database
-spring.datasource.url=jdbc:h2:mem:todo
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# ??????????? ? PostgreSQL ????? ?????????? DATABASE_URL
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
-# JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+# ??????? PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ????????? JPA
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# ?????: ??????? 0.0.0.0 ? ?????????? PORT
+server.address=0.0.0.0
+server.port=${PORT:8080}
