--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,19 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# ??????????? ????:
+spring.datasource.url=jdbc:postgresql://dpg-d2jdbrh5pdvs73f3pj0g-a.oregon-postgres.render.com:5432/todo_db_437e
+spring.datasource.username=todo_db_437e_user
+spring.datasource.password=HefqhcwzePORkYimZHenCG17eQGLDR1D
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# ????????? ????????????? ????? SQL ???????
+spring.sql.init.mode=never
 
 server.address=0.0.0.0
-server.port=${PORT:8080}
+server.port=8080
+
+# ????????? HikariCP
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
