Fixed DB_URL #5

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://dpg-d2jdbrh5pdvs73f3pj0g-a.oregon-postgres.render.com:5432/todo_db_437e?ssl=true&sslmode=require
+spring.datasource.url=jdbc:postgresql://todo_db_437e_user:HefqhcwzePORkYimZHenCG17eQGLDR1D@dpg-d2jdbrh5pdvs73f3pj0g-a/todo_db_437e
 spring.datasource.username=todo_db_437e_user
 spring.datasource.password=HefqhcwzePORkYimZHenCG17eQGLDR1D
 
