--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,3 +15,7 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.ssl=true
 spring.datasource.hikari.sslmode=require
+
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.hibernate=INFO
