Fixed DB_URL #9

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,21 +1,10 @@
-spring.datasource.url=jdbc:postgresql://dpg-d2jdbrh5pdvs73f3pj0g-a.frankfurt-postgres.render.com:5432/todo_dev
-spring.datasource.username=todo_db_437e_user
-spring.datasource.password=HefqhcwzePORkYimZHenCG17eQGLDR1D
-
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.sql.init.mode=never
-
-server.address=0.0.0.0
 server.port=8080
 
-# HikariCP settings
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.ssl=true
-spring.datasource.hikari.sslmode=require
+spring.datasource.url=jdbc:postgresql://dpg-d2jdbrh5pdvs73f3pj0g-a.frankfurt-postgres.render.com:5432/todo_db_437e
+spring.datasource.username=todo_db_437e_user
+spring.datasource.password=HefqhcwzePORkYimZHenCG17eQGLDR1D
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-logging.level.org.springframework.jdbc=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
-logging.level.org.hibernate=INFO
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
