--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,1 @@
-server.port=8080
-
-spring.datasource.url=jdbc:postgresql://dpg-d2jdbrh5pdvs73f3pj0g-a.frankfurt-postgres.render.com:5432/todo_db_437e
-spring.datasource.username=todo_db_437e_user
-spring.datasource.password=HefqhcwzePORkYimZHenCG17eQGLDR1D
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.profiles.active=prod
